--- a/hw3_dz2426.md
+++ b/hw3_dz2426.md
@@ -53,7 +53,7 @@ aisles
 
 # Section 1.4
 
-Table 2: mean hour of the day at which Pink Lady Apples and Coffee Ice
+Table 2: Mean hour of the day at which Pink Lady Apples and Coffee Ice
 Cream are ordered on each day of the
 week
 
@@ -73,9 +73,10 @@ week
 
 Comments:
 
-In 2002, CT, FL, MA, NC, NJ, PA were observed at 7 or more locations. In
-2010, CA, CO, FL, MA, MD, NC, NE, NJ, NY, OH, PA, SC, TX, WA were
-observed at 7 or more
+In 2002, CT, FL, MA, MD, NC, NH, NJ, NY, PA, UT were observed at 7 or
+more locations. In 2010, CA, CO, CT, FL, ID, LA, MA, MD, ME, MN, NC, NE,
+NH, NJ, NM, NY, OH, PA, RI, SC, TN, TX, UT, VT, WA were observed at 7 or
+more
 locations.
 
 # Section 2.2
@@ -104,17 +105,16 @@ at midnight. A total of 1440 minutes of activity data was included.
 
 # Section 3.2
 
-Comments:
-
 Table 3: Total activity in minutes for each day over 5
 weeks
 
-| week | Monday | Tuesday | Wednesday | Thursday | Friday | Saturday | Sunday |
-| ---: | -----: | ------: | --------: | -------: | -----: | -------: | -----: |
-|    1 |  78828 |  307094 |    340115 |   355924 | 480543 |   376254 | 631105 |
-|    2 | 295431 |  423245 |    440962 |   474048 | 568839 |   607175 | 422018 |
-|    3 | 685910 |  381507 |    468869 |   371230 | 467420 |   382928 | 467052 |
-|    4 | 409450 |  319568 |    434460 |   340291 | 154049 |     1440 | 260617 |
-|    5 | 389080 |  367824 |    445366 |   549658 | 620860 |     1440 | 138421 |
+|    week | Monday | Tuesday | Wednesday | Thursday | Friday | Saturday | Sunday |
+| ------: | -----: | ------: | --------: | -------: | -----: | -------: | -----: |
+|       1 |  78828 |  307094 |    340115 |   355924 | 480543 |   376254 | 631105 |
+|       2 | 295431 |  423245 |    440962 |   474048 | 568839 |   607175 | 422018 |
+|       3 | 685910 |  381507 |    468869 |   371230 | 467420 |   382928 | 467052 |
+|       4 | 409450 |  319568 |    434460 |   340291 | 154049 |     1440 | 260617 |
+|       5 | 389080 |  367824 |    445366 |   549658 | 620860 |     1440 | 138421 |
+| Comment |     s: |         |           |          |        |          |        |
 
 # Section 3.3
