--- a/hw3_dz2426.md
+++ b/hw3_dz2426.md
@@ -95,26 +95,35 @@ locations.
 
 Comments:
 
-The tidied “accel\_data” dataset contains 35 observations and 1444
-variables. Variable “week” includes number 1-5, indicating the number of
-weeks this experiment was at. Variable “day” refers to the day the
-accelerometer was monitoring on. Variable “if\_weekday” determines if
-the day is a weekday or weeekend. The rest of the “activity” columns
-represent the activity counts for each minute of a 24-hour day starting
-at midnight. A total of 1440 minutes of activity data was included.
+The tidied “accel\_data” dataset contains 50400 observations and 6
+variables. This continuous 5-week accelerometer data was collected for
+monitoring the physicial activity of a 63 year-old male with BMI 25 who
+was diagnosed with congestive heart failure (CHF).
+
+Numeric variable “week” includes number 1-5, indicating the number of
+weeks this experiment was at. Factor variable “day” refers to the day
+the accelerometer was monitoring on over 5 weeks. Character variable
+“if\_weekday” shows if the day is a weekday or weeekend. Numeric
+variable “minute” lists out each minute within each day over 5 weeks.
+Numeric variable “activity\_counts” shows the physicial activity of this
+63 year-old male on every minute over 5 weeks.
 
 # Section 3.2
 
-Table 3: Total activity in minutes for each day over 5
+Table 3: Total activity measured in minutes for the 63 year-old male
+with BMI 25 on each day over 5
 weeks
 
-|    week | Monday | Tuesday | Wednesday | Thursday | Friday | Saturday | Sunday |
-| ------: | -----: | ------: | --------: | -------: | -----: | -------: | -----: |
-|       1 |  78828 |  307094 |    340115 |   355924 | 480543 |   376254 | 631105 |
-|       2 | 295431 |  423245 |    440962 |   474048 | 568839 |   607175 | 422018 |
-|       3 | 685910 |  381507 |    468869 |   371230 | 467420 |   382928 | 467052 |
-|       4 | 409450 |  319568 |    434460 |   340291 | 154049 |     1440 | 260617 |
-|       5 | 389080 |  367824 |    445366 |   549658 | 620860 |     1440 | 138421 |
-| Comment |     s: |         |           |          |        |          |        |
+| week | Monday | Tuesday | Wednesday | Thursday | Friday | Saturday | Sunday |
+| ---: | -----: | ------: | --------: | -------: | -----: | -------: | -----: |
+|    1 |  78828 |  307094 |    340115 |   355924 | 480543 |   376254 | 631105 |
+|    2 | 295431 |  423245 |    440962 |   474048 | 568839 |   607175 | 422018 |
+|    3 | 685910 |  381507 |    468869 |   371230 | 467420 |   382928 | 467052 |
+|    4 | 409450 |  319568 |    434460 |   340291 | 154049 |     1440 | 260617 |
+|    5 | 389080 |  367824 |    445366 |   549658 | 620860 |     1440 | 138421 |
 
 # Section 3.3
+
+<img src="hw3_dz2426_files/figure-gfm/unnamed-chunk-20-1.png" width="100%" />
+
+<img src="hw3_dz2426_files/figure-gfm/unnamed-chunk-21-1.png" width="100%" />
