--- a/hw3_dz2426.md
+++ b/hw3_dz2426.md
@@ -110,8 +110,8 @@ Numeric variable “activity\_counts” shows the physicial activity of this
 
 # Section 3.2
 
-Table 3: Total activity measured in minutes for the 63 year-old male
-with BMI 25 on each day over 5
+Table 3: Total activity measured in minutes of a 63 year-old male with
+BMI 25 on each day over 5
 weeks
 
 | week | Monday | Tuesday | Wednesday | Thursday | Friday | Saturday | Sunday |
