--- a/hw3_dz2426.md
+++ b/hw3_dz2426.md
@@ -122,6 +122,15 @@ weeks
 |    4 | 409450 |  319568 |    434460 |   340291 | 154049 |     1440 | 260617 |
 |    5 | 389080 |  367824 |    445366 |   549658 | 620860 |     1440 | 138421 |
 
+Comments:
+
+Based on the table shown above, we could observe that the physical
+activity tends to increase during weekdays over the 5 weeks, and tends
+to decrease during weekends over the 5 weeks. This may indicate that
+this 63 year-old male was getting less active during weekends, while
+more active during
+weekdays.
+
 # Section 3.3
 
 <img src="hw3_dz2426_files/figure-gfm/unnamed-chunk-20-1.png" width="100%" />
