--- a/hw3_dz2426.md
+++ b/hw3_dz2426.md
@@ -73,10 +73,9 @@ week
 
 Comments:
 
-In 2002, CT, FL, MA, MD, NC, NH, NJ, NY, PA, UT were observed at 7 or
-more locations. In 2010, CA, CO, CT, FL, ID, LA, MA, MD, ME, MN, NC, NE,
-NH, NJ, NM, NY, OH, PA, RI, SC, TN, TX, UT, VT, WA were observed at 7 or
-more
+In 2002, CT, FL, MA, NC, NJ, PA were observed at 7 or more locations. In
+2010, CA, CO, FL, MA, MD, NC, NE, NJ, NY, OH, PA, SC, TX, WA were
+observed at 7 or more
 locations.
 
 # Section 2.2
